# Lambda_XC

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_analysis.py
simulations/: plot_pure_results.py  pure_simulation.py  run_pure_simulation.sh
simulations/compare/: README.md  compare_power.py  plot_power_summary.py  run_compare_cline.sh  run_compare_mixture.sh  run_grid_cline.sh  run_grid_mixture.sh  run_power_cline_100.sh  run_power_mixture_100.sh  run_z_cline_grid_rep50.sh  run_z_cline_tau_010_030_050_rep50.sh  run_z_cline_tau_010_030_050_rep50_split.sh  run_z_mixture_grid_rep50.sh
simulations/compare/output/cline_power100/: power_details.csv  power_summary.csv
simulations/compare/output/cline_quick/: power_details.csv  power_summary.csv
simulations/compare/output/cline_quick_z_fix/: power_details.csv  power_summary.csv
simulations/compare/output/cline_z_grid_rep50/: power_details.csv  power_summary.csv
simulations/compare/test_output_cline_z/: power_details.csv  power_summary.csv
simulations/fpr/: fpr_lambda.py  fpr_lambda_no_perm.py  fpr_lambda_ztest.py  run_fpr_null.sh  run_fpr_null_no_perm.sh  run_fpr_null_ztest.sh
simulations/fpr/output_null/: fpr_details.csv  fpr_summary.csv
simulations/fpr/output_null_ztest/: fpr_ztest_details.csv  fpr_ztest_summary.csv
simulations/output/: pure_simulation_bootstrap.csv  pure_simulation_summary.csv
simulations/test_output/: pure_simulation_replicates.csv  pure_simulation_summary.csv
src/lambda_xc/: __init__.py  analysis.py  cli.py  data.py  pipeline.py  plots.py  pruning.py
(+8 files in other folders)
